--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/third-parties": "15.1.1",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.1",
+    "framer-motion": "^12.4.11",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.479.0",
     "motion": "^12.4.10",
@@ -26,11 +27,14 @@
     "react-google-recaptcha": "^3.1.0",
     "react-icon-cloud": "^4.1.7",
     "react-icons": "^4.11.0",
+    "react-intersection-observer": "^9.16.0",
     "react-toastify": "^10.0.4",
     "sharp": "^0.33.5",
     "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
+    "@types/node": "22.13.10",
+    "@types/react": "19.0.10",
     "autoprefixer": "latest",
     "eslint": "latest",
     "eslint-config-next": "15.1.1",
